feat: parentId로 지역 목록 조회 api 추가